# django-site

./: .gitignore  README.md  pyproject.toml  requirements.txt
.ebextensions/: django.config
blog_site/: settings.py  urls.py
blogs/: admin.py  forms.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_post_date_updated.py  0003_remove_post_timestamp_post_thumbnail.py  0004_alter_post_thumbnail.py  0005_alter_post_options_post_active.py
blogs/templates/: base.html  footer.html  navbar.html
blogs/tests/: test_context_processors.py  test_models.py  test_templatetags.py  test_views.py
templates/: base_centered.html
templates/registration/: login.html
users/: models.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_models.py  test_views.py
