[tool.poetry]
name = "blog-site"
version = "0.1.0"
description = ""
authors = ["Isai Ramirez <86127102+CodeSwallow@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "blog_site"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.3"
markdown = "^3.4.1"
pygments = "^2.13.0"
psycopg2-binary = "^2.9.5"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.7"
django-ses = "^3.2.2"
boto3 = "^1.26.24"
python-dotenv = "^0.21.0"
pillow = "^9.3.0"
django-storages = "^1.13.1"
django-cors-headers = "^3.13.0"


[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

